examples/pos/multiline_string.effekt
def main() = println("""a
    b
	c
d""")
