examples/neg/singleline_string_containing_newline.effekt
def main() = println("a
b")
